app/assets/stylesheets/_toc.scss
.toc {
  transition: opacity 320ms;
  display: grid;

  &__wrapper {
    border-right: 1px solid #EEE;
    transition: transform 320ms;
    box-sizing: border-box;
    padding-right: 50px;
    margin-right: 50px;
  }

  &__spacer {
    margin-top: 20px;
  }

  &__page {
    text-decoration: none;
    font-weight: 600;
    display: block;
    color: #333;

    margin-top: 5px;

    &.active,
    &:hover {
      color: $primary;
    }

    div {
      align-items: center;
      display: flex;
    }

    svg {
      fill: currentColor;
      margin-right: 7px;
    }

    /* It's only used for the blog posts. */
    small {
      margin-bottom: 15px;
      display: block;
      color: #AAA;
    }
  }

  &__pages > &__pages {
    padding-left: 15px;
    margin-left:5px;
    margin-top: 7px;
    border-left: 1px dashed #CCC;
  }

  &__section {
    text-transform: uppercase;
    font-weight: 600;
    font-size: 14px;
    color: #999;

    margin-bottom: 5px;

    &:not(:first-child) {
      margin-top: 30px;
    }
  }

  @media (max-width: 1200px) {
    background: rgba(20,20,20,0.9);
    position: fixed;
    z-index: 500;
    bottom: 0;
    right: 0;
    left: 0;
    top: 0;


    pointer-events: none;
    opacity: 0;

    &--open {
      pointer-events: auto;
      opacity: 1;

    }

    &--open &__wrapper {
      transform: translateX(0);
    }

    &__wrapper {
      overflow-x: hidden;
      overflow-y: auto;

      transform: translateX(-330px);
      background: white;
      padding: 20px;
      width: 280px;
      margin: 0;
    }
  }
}

.toc-mobile {
  -webkit-touch-callout: none;
  display: none;

  margin-bottom: 15px;
  padding: 10px 15px;
  border-radius: 3px;
  background: #EEE;
  cursor: pointer;

  font-weight: bold;

  justify-content: space-between;
  align-items: center;

  @media (max-width: 1200px) {
    display: flex;
  }
}

